# news_classifier

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  Readme.md  example.py  pyproject.toml  requirements.txt
example/: example.py  example_classify_news.py  example_infer_keywords.py
news_classifier/: biznews.py  config.py
news_samples/: getDJsamples.sh
src/: KeyGenerator.py  SimpleComparator.py  base.py  keyComparator.py  keyExtractor.py  synonymExtensor.py
src/KeyGenerator/: KeyGenerator.py  __init__.py
src/moduleII/: EmbeddingBasedComparator.py  SimpleComparator.py  base.py
src/utils/: check_input_type_and_transform.py  evaluation.py  instantiate.py  keywords.py  stopwords.py  struct.py  tokenization.py  utility.py
src/utils/embeddings/: base.py  embeddings.py
src/utils/keywords/: base.py  keywords.py
src/utils/keywords/esg_news/: ESG_keywords.txt  ESG_keywords_20210624145612.json  ESG_keywords_20210624145612.txt
src/utils/keywords/negative_news/: NN_keywords_20210624145552.json  NN_keywords_20210624145552.txt
tests/: asserts.py  conftest.py  test_biznews.py
tests/test_asserts_function/: test_asserts.py
tests/test_utils/: test_check_input_type_and_transform.py  test_tokenization_ckip_transformers.py
