[tool.poetry]
name = "news_classifier"
version = "0.1.0"
description = ""
authors = ["Yu-Lun Chiang <chiangyulun0914@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
tensorflow = "^2.4.1"
monpa = "^0.3.2"
jieba = "^0.42.1"
spacy = "^3.0.5"
spacy-transformers = "^1.0.2"
gensim = "^3.8.3"
flair = "^0.8.0post1"
transformers = "^4.5.0"
sentence-transformers = "^1.0.4"
ckiptagger = "^0.2.1"
ckip-transformers = "^0.2.3"
scikit-learn = "^0.24.1"
pandas = "^1.2.4"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"
pytest = "^6.2.3"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
